[workspace]
members = [
        "crates/mentat-asserter",
        "crates/mentat-client",
        # Disabled for now.
        # Needs to be changed to match module.
        # "crates/mentat-keys",
        "mentat-macros",
        "crates/mentat-parser",
        "crates/mentat-server",
        "crates/mentat-syncer",
        "crates/mentat-test-utils",
        "crates/mentat-tokenizer",
        "crates/mentat-types",
        # "examples/mentat-cli",
        # "tools/test-converter",
]