[workspace]

members = [
        "crates/mentat-asserter",
        "crates/mentat-client",
        "crates/mentat-constructor",
        "crates/mentat-keys",
        "mentat-macros",
        "crates/mentat-parser",
        "crates/mentat-server",
        "crates/mentat-syncer",
        "crates/mentat-tokenizer",
        "crates/mentat-test-utils",
        "crates/mentat-types",
        # "examples/mentat-cli",
]

[workspace.dependencies]
anyhow = { version = "1.0" }
axum = { version = "0.6", default-features = false, features = [
        "http1",
        "json",
        "tokio",
] }
color-backtrace = { version = "0.5", default-features = false }
const_format = "0.2"
crossbeam = "0.8"
crossbeam-channel = "0.5"
hyper = { version = "0.14", default-features = false }
from_tuple = "0.1"
futures = "0.3"
include_dir = "0.7"
indexmap = { version = "1.9", default-features = false, features = ["serde"] }
mentat-asserter = { path = "./crates/mentat-asserter" }
mentat-keys = { path = "./crates/mentat-keys" }
mentat-macros = { path = "./mentat-macros" }
mentat-tokenizer = { path = "./crates/mentat-tokenizer" }
mentat-types = { path = "./crates/mentat-types" }
mentat-test-utils = { path = "./crates/mentat-test-utils" }
mockall = "0.11"
num-bigint-dig = { version = "0.8" }
num_cpus = { version = "1.15", default-features = false }
num-traits = "0.2"
opentelemetry = { version = "0.18", default-features = true, features = [
        "rt-tokio",
] }
opentelemetry-jaeger = { version = "0.17", default-features = true, features = [
        "collector_client",
        "hyper_collector_client",
        "rt-tokio",
] }
parking_lot = "0.12"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
sha2 = { version = "0.10" }
sysinfo = { version = "0.27", default-features = false }
thiserror = "1.0"
tokio = { version = "1.23", default-features = false, features = [
        "macros",
        "rt-multi-thread",
] }
tokio-test = "0.4"
toml = { version = "0.5", default-features = false }
tower = { version = "0.4", default-features = false }
tower-http = { version = "0.3", features = ["cors"] }
tracing = { version = "0.1", default-features = false, features = [
        "attributes",
] }
tracing-error = { version = "0.2", default-features = false }
tracing-opentelemetry = { version = "0.18", default-features = false }
tracing-subscriber = { version = "0.3", features = ["env-filter", "smallvec"] }
tracing-tree = { version = "0.2", default-features = false }
