[package]
name = "mentat"
version = "0.1.0"
edition = "2021"
rust-version = "1.59.0"

[features]
_network = ["axum", "indexmap", "serde", "serde_json", "reqwest"]
client = ["_network"]
default = ["server"]
server = [
    "_network",
    "color-backtrace",
    "hyper",
    "opentelemetry",
    "opentelemetry-jaeger",
    "tokio",
    "toml",
    "tower",
    "tracing",
    "tracing-error",
    "tracing-opentelemetry",
    "tracing-subscriber",
    "tracing-tree"
]
sdk = ["keys"]
keys = ["ed25519-dalek", "mina-hasher", "mina-signer", "p256", "p256/ecdsa", "rand", "secp256k1", "secp256k1/bitcoin_hashes", "secp256k1/recovery", "secp256k1/rand-std", "snarkvm-dpc", "snarkvm-algorithms", "snarkvm-utilities"]

[dependencies]
axum = { version = "0.4.8", optional = true, default-features = false, features = ["http1", "json"] }
color-backtrace = { version = "0.5.1", optional = true }
ed25519-dalek = { version = "1.0", optional = true }
hyper = { version = "0.14", optional = true }
indexmap = { version = "1.7", optional = true, default-features = false, features = ["serde"] }
mina-hasher = { git = "https://github.com/o1-labs/proof-systems", optional = true }
mina-signer = { git = "https://github.com/o1-labs/proof-systems", optional = true }
opentelemetry = { version = "0.17.0", optional = true, features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.16.0", optional = true, features = ["rt-tokio"] }
p256 = { version = "0.10", optional = true }
secp256k1 = { version = "0.22", optional = true }
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }
serde_json = { version = "1.0", optional = true }
snarkvm-algorithms = { version="0.8", optional = true }
snarkvm-dpc = { version="0.8", optional = true }
snarkvm-utilities = { version="0.8", optional = true }
rand = { version = "0.8", optional = true }
reqwest = { version = "0.11", optional = true, default-features = false, features = ["json"] }
toml = { version = "0.5.8", optional = true, default-features = false }
tokio = { version = "1.17.0", optional = true, features = ["full", "parking_lot"] }
tower = { version = "0.4.12", optional = true, default-features = false }
tracing = { version = "0.1.32", optional = true }
tracing-error = { version = "0.2.0", optional = true }
tracing-opentelemetry = { version = "0.17.2", optional = true }
tracing-subscriber = { version = "0.3.9", optional = true, features = ["env-filter"] }
tracing-tree = { version = "0.2.0", optional = true }

