[package]
name = "mentat"
version = "0.1.0"
edition = "2021"
rust-version = "1.59.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
_network = ["from_tuple", "indexmap", "serde", "serde_json"]
client = ["_network", "wasm-bindgen", "wasm-bindgen-futures", "web-sys"]
default = ["server"]
server = [
    "_network",
    "axum",
    "color-backtrace",
    "hyper",
    "mentat-macros",
    "num_cpus",
    "opentelemetry",
    "opentelemetry-jaeger",
    "sysinfo",
    "reqwest",
    "tokio",
    "toml",
    "tower",
    "tracing",
    "tracing-error",
    "tracing-opentelemetry",
    "tracing-subscriber",
    "tracing-tree"
]
sdk = ["keys"]
keys = ["ed25519-dalek", "mina-hasher", "mina-signer", "p256", "p256/ecdsa", "rand", "secp256k1", "secp256k1/bitcoin_hashes", "secp256k1/recovery", "secp256k1/rand-std", "snarkvm-dpc", "snarkvm-algorithms", "snarkvm-utilities"]

[dependencies]
from_tuple = { version = "0.1.2", optional = true, default-features = false }
indexmap = { version = "1.8.1", optional = true, default-features = false, features = ["serde", "std"] }
serde = { version = "1.0.136", optional = true, default-features = false, features = ["derive"] }
serde_json = { version = "1.0.79", optional = true, default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.80", optional = true, default-features = false, features = ["serde-serialize", "spans"] }
wasm-bindgen-futures = { version = "0.4.30", optional = true }
web-sys = { version = "0.3.57", optional = true, default-features = false, features = ["Request", "RequestInit", "Response", "Window"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = { version = "0.5.1", optional = true, default-features = false, features = ["http1", "json"] }
color-backtrace = { version = "0.5.1", optional = true, default-features = false }
ed25519-dalek = { version = "1.0", optional = true }
hyper = { version = "0.14.18", optional = true, default-features = false }
mentat-macros = { path = "../mentat-macros", optional = true }
mina-hasher = { git = "https://github.com/o1-labs/proof-systems", optional = true, default-features = false }
mina-signer = { git = "https://github.com/o1-labs/proof-systems", optional = true, default-features = false }
num_cpus = { version = "1.13.1", optional = true, default-features = false}
opentelemetry = { version = "0.17.0", optional = true, default-features = false, features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.16.0", optional = true, default-features = false, features = ["rt-tokio"] }
p256 = { version = "0.10.1", optional = true, default-features = false }
secp256k1 = { version = "0.22", optional = true }
serde = { version = "1.0.136", optional = true, default-features = false, features = ["derive"] }
serde_json = { version = "1.0.79", optional = true, default-features = false }
snarkvm-algorithms = { version="0.8", optional = true, default-features = false }
snarkvm-dpc = { version="0.8", optional = true }
snarkvm-utilities = { version="0.8", optional = true }
rand = { version = "0.8.5", optional = true, default-features = false }
reqwest = { version = "0.11.10", optional = true, default-features = false, features = ["json"] }
toml = { version = "0.5.8", optional = true, default-features = false }
tokio = { version = "1.17.0", optional = true, default-features = false, features = ["macros", "rt-multi-thread"] }
tower = { version = "0.4.12", optional = true, default-features = false }
tracing = { version = "0.1.32", optional = true, default-features = false, features = ["attributes"] }
tracing-error = { version = "0.2.0", optional = true, default-features = false }
tracing-opentelemetry = { version = "0.17.2", optional = true, default-features = false }
tracing-subscriber = { version = "0.3.10", optional = true, features = ["env-filter"] }
tracing-tree = { version = "0.2.0", optional = true, default-features = false }
sysinfo = { version = "0.23.9", optional = true, default-features = false}

[dev-dependencies]
rand-old = { package = "rand", version = "0.7" }
array-init = "2.0.0"
