[package]
name = "mentat-asserter"
version = "0.1.0"
edition = "2021"
rust-version = "1.62.1"

[dependencies]
indexmap = { workspace = true }
mentat-types = { workspace = true }
num-bigint-dig = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
include_dir = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
mentat-test-utils = { workspace = true }
