[package]
name = "mentat-client"
version = "0.1.0"
edition = "2021"
rust-version = "1.62.1"

[dependencies]
anyhow = { version = "1.0.56" }
mentat-types = { path = "../mentat-types" }
serde = { version = "1.0.136", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.79", default-features = false }
reqwest = { version = "0.11.10", default-features = false, features = ["json"] }
