[package]
name = "mentat-constructor"
version = "0.1.0"
edition = "2021"
rust-version = "1.62.1"

[dependencies]
mentat-utils = { path = "../mentat-utils" }
mentat-types = { path = "../mentat-types" }
mentat-asserter = { path = "../mentat-asserter" }
mentat-storage = { path = "../mentat-storage" }
# parking_lot = "0.12.1"
# crossbeam-channel = "0.5.6"
# fnv = "1.0.7"
indexmap = "1.9.1"
num-bigint-dig = { version = "0.8.1" }
thiserror = "1.0.31"
serde = { version = "1.0.136", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.79", default-features = false }
regex = "1.6.0"
lazy_static = "1.4.0"
tracing = { version = "0.1.36", default-features = false, features = [
    "attributes",
] }
rand = "0.8.5"
url = "2.3.1"
reqwest = { version = "0.11.10", default-features = false, features = ["json"] }
rand_regex = "0.15.1"
# TODO remove once keys crate is finished
secp256k1 = { version = "0.24.0", features = ["bitcoin_hashes", "rand-std"] }


[dev-dependencies]
mentat-test-utils = { path = "../mentat-test-utils" }
httptest = "0.15.4"
mockall = "0.11.2"
futures = "0.3.24"
mentat-storage = { path = "../mentat-storage", features = ["incomplete"]}
