[package]
name = "mentat-constructor"
version = "0.1.0"
edition = "2021"
rust-version = "1.62.1"

[dependencies]
indexmap = { workspace = true }
mentat-keys = { workspace = true }
mentat-tokenizer = { workspace = true }
mentat-types = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
mentat-test-utils = { workspace = true }
