[package]
name = "mentat-keys"
version = "0.1.0"
edition = "2021"
rust-version = "1.62.1"

[dependencies]
mentat-asserter = { workspace = true }
mentat-macros = { workspace = true }
mentat-types = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
ed25519-compact = { version = "2.0" }
# mina-hasher = { git = "https://github.com/o1-labs/proof-systems", default-features = false }
# mina-signer = { git = "https://github.com/o1-labs/proof-systems", default-features = false }
# p256 = { version = "0.11.1", default-features = false, features = ["ecdsa"] }
# secp256k1 = { version = "0.22", features = ["bitcoin_hashes"] }
# sha2 = { version = "0.10.2" }
# snarkvm-algorithms = { version = "0.8", default-features = false }
# snarkvm-dpc = { version = "0.8" }
# snarkvm-utilities = { version = "0.8" }
# rand = { version = "0.8.5", default-features = false }

[dev-dependencies]
# array-init = "2.0.0"
mentat-test-utils = { workspace = true }
