[package]
name = "mentat-keys"
version = "0.1.0"
edition = "2021"
rust-version = "1.62.1"

[dependencies]
mentat-asserter = { workspace = true }
mentat-macros = { workspace = true }
mentat-types = { workspace = true }
p256 = { version = "0.12" }
secp256k1 = { version = "0.26", features = ["rand-std", "recovery"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ed25519-compact = { version = "2.0" }
rand = { version = "0.8" }
# rand = { version = "0.8.5", default-features = false }

[dev-dependencies]
# array-init = "2.0.0"
mentat-test-utils = { workspace = true }
