[package]
name = "mentat-parser"
version = "0.1.0"
edition = "2021"
rust-version = "1.62.1"

[dependencies]
indexmap = { workspace = true }
mentat-asserter = { workspace = true }
mentat-types = { workspace = true }
num-bigint-dig = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
mentat-test-utils = { workspace = true }
