[package]
name = "mentat-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.62.1"

[dependencies]
axum = { version = "0.5.1", default-features = false, features = [
    "http1",
    "json",
] }
color-backtrace = { version = "0.5.1", default-features = false }
hyper = { version = "0.14.18", default-features = false }
indexmap = { version = "1.8.1", default-features = false, features = ["serde"] }
mentat-asserter = { path = "../mentat-asserter" }
mentat-macros = { path = "../../mentat-macros" }
mentat-types = { path = "../mentat-types" }
num_cpus = { version = "1.13.1", default-features = false }
opentelemetry = { version = "0.17.0", default-features = true, features = [
    "rt-tokio",
] }
opentelemetry-jaeger = { version = "0.16.0", default-features = true, features = [
    "collector_client",
    "isahc_collector_client",
    "rt-tokio",
] }
serde = { version = "1.0.136", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.79", default-features = false }
reqwest = { version = "0.11.10", default-features = false, features = ["json"] }
toml = { version = "0.5.8", default-features = false }
tokio = { version = "1.17.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
tower = { version = "0.4.12", default-features = false }
tracing = { version = "0.1.36", default-features = false, features = [
    "attributes",
] }
tracing-error = { version = "0.2.0", default-features = false }
tracing-opentelemetry = { version = "0.17.4", default-features = false }
tracing-subscriber = { version = "0.3.15", features = [
    "env-filter",
    "smallvec",
] }
tracing-tree = { version = "0.2.1", default-features = false }
sysinfo = { version = "0.23.9", default-features = false }
const_format = "0.2.26"
