[package]
name = "mentat-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.62.1"

[dependencies]
axum = { workspace = true }
color-backtrace = { workspace = true }
const_format = { workspace = true }
hyper = { workspace = true }
indexmap = { workspace = true }
mentat-asserter = { workspace = true }
mentat-macros = { workspace = true }
mentat-types = { workspace = true }
num_cpus = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-jaeger = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sysinfo = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-error = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-tree = { workspace = true }