[package]
name = "mentat-storage"
version = "0.1.0"
edition = "2021"
rust-version = "1.62.1"

[dependencies]
mentat-types = { path = "../mentat-types" }
# mentat-fetcher = { path = "../mentat-fetcher" }
mentat-utils = { path = "../mentat-utils" }
# mentat-types = { path = "../mentat-types" }
# parking_lot = "0.12.1"
crossbeam-channel = "0.5.6"
indexmap = { version = "1.8.1", default-features = false, features = ["serde"] }
# fnv = "1.0.7"
# num-bigint-dig = { version = "0.8.1", features = ["rand"] }
thiserror = "1.0.31"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.79" }
# rand = "0.8.5"
sled = "0.34.7"
tracing = { version = "0.1.36", default-features = false, features = [
    "attributes",
] }

[dev-dependencies]
mentat-test-utils = { path = "../mentat-test-utils" }