[package]
name = "mentat-syncer"
version = "0.1.0"
edition = "2021"
rust-version = "1.62.1"

[dependencies]
mentat-types = { workspace = true }
mentat-asserter = { workspace = true }
mentat-test-utils = { workspace = true }
thiserror = "1.0.31"
tokio = { workspace = true }
indexmap = { workspace = true }
crossbeam = { workspace = true }
parking_lot = "0.12.1"
tracing = { version = "0.1.36", default-features = false, features = [
    "attributes",
] }
crossbeam-channel = "0.5.6"
futures = "0.3.23"

[dev-dependencies]
tokio-test = "0.4.2"