[package]
name = "mentat-syncer"
version = "0.1.0"
edition = "2021"
rust-version = "1.62.1"

[dependencies]
crossbeam = { workspace = true }
crossbeam-channel = { workspace = true }
futures = { workspace = true }
indexmap = { workspace = true }
mentat-types = { workspace = true }
mentat-asserter = { workspace = true }
mentat-test-utils = { workspace = true }
mockall = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
