[package]
name = "mentat-types"
version = "0.1.0"
edition = "2021"
rust-version = "1.62.1"

[dependencies]
axum = { workspace = true }
from_tuple = { workspace = true }
indexmap = { workspace = true }
mentat-macros = { workspace = true }
num-bigint-dig = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
mentat-test-utils = { workspace = true }
