[package]
name = "mentat-utils"
version = "0.1.0"
edition = "2021"
rust-version = "1.62.1"

[dependencies]
mentat-asserter = { path = "../mentat-asserter" }
# mentat-fetcher = { path = "../mentat-fetcher" }
# mentat-storage = { path = "../mentat-storage" }
mentat-types = { path = "../mentat-types" }
parking_lot = "0.12.1"
crossbeam-channel = "0.5.6"
indexmap = { version = "1.8.1", default-features = false, features = ["serde"] }
fnv = "1.0.7"
num-bigint-dig = { version = "0.8.1", features = ["rand"] }
thiserror = "1.0.31"
serde = { version = "1.0.136", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.79", default-features = false }
rand = "0.8.5"
